--- a/P4_01_code_source/index.html
+++ b/P4_01_code_source/index.html
@@ -23,7 +23,7 @@
 
     
 <!-- Analytics -->
- 
+<meta name="google-site-verification" content="sQOd3I3jGGK6XSBvz0NUfon7fpHrRC_AN49pdoT8XXc" />
 <!-- Analytics END -->
     
 </head>
