--- a/P4_01_code_source/index.natif.html
+++ b/P4_01_code_source/index.natif.html
@@ -62,7 +62,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo alternatif de la chouette agence" />
+				<img src="img/logo.png"  class="center-block image-resize-mode" width="100" alt="Logo alternatif de la chouette agence" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h1>
@@ -221,28 +221,28 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center contrast">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
@@ -250,38 +250,38 @@
 					<div class="col-sm-4">
 						Partenaires
 							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+								<li><a class="contrast" href="voiture.com">voiture.com</a></li>
+								<li><a class="contrast" href="pizza.com">pizza.com</a></li>
+								<li><a class="contrast" href="matoiture.com">matoiture.com</a></li>
+								<li><a class="contrast" href="immobilierseo.com">immobilierseo.com</a></li>
 							</ul>		
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 1
 						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
+							<li><a class="contrast" href="annuaireagence.com">annuaireagence.com</a></li>
+							<li><a class="contrast" href="annuaireseo.com">annuaireseo.com</a></li>
+							<li><a class="contrast" href="annuairemarketing.com">annuairemarketing.com</a></li>
+							<li><a class="contrast" href="123seoture.com">123seo.com</a></li>
+							<li><a class="contrast" href="123site.com">123site.com</a></li>
+							<li><a class="contrast" href="annuairewordpress.com">annuairewordpress.com</a></li>
+							<li><a class="contrast" href="listeagence.com">listeagence.com</a></li>
+							<li><a class="contrast" href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
+							<li><a class="contrast" href="listeseo.com">listeseo.com</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						Annuaires liste 2
 						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+							<li><a class="contrast" href="betterseo.com">betterseo.com</a></li>
+							<li><a class="contrast" href="ameliorerseo.com">ameliorerseo.com</a></li>
+							<li><a class="contrast" href="seojuicelien.com">seojuicelien.com</a></li>
+							<li><a class="contrast" href="meilleursliens.com">meilleursliens.com</a></li>
+							<li><a class="contrast" href="liensagogo.com">liensagogo.com</a></li>
+							<li><a class="contrast" href="backlink.com">backlink.com</a></li>
+							<li><a class="contrast" href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
+							<li><a class="contrast" href="remontersurgoogle.com">remontersurgoogle.com</a></li>
+							<li><a class="contrast" href="vraiseofiable.com">vraiseofiable.com</a></li>
 						</ul>
 					</div>
 				</div>
